--- a/style.css
+++ b/style.css
@@ -31,8 +31,9 @@ body {
     justify-content: center;
     align-items: center;
     color: white;
-    transform: translateX(-100%);
     transition: all 0.5s;
+    background-color: black;
+    transform: translateX(-100%);
 }
 
 .caption h1 {
@@ -46,10 +47,9 @@ body {
 }
 
 .container:hover .caption {
-    background-color: rgba(0, 0, 0, 0.5);
     transform: translateX(0);
 }
 
 .container:hover img {
-    transform: scale(1.3) rotate(-15deg);
+    transform: translateX(100%);
 }
